[workspace]
members = [ 'minrt-sys' ]

[package]
name = "rust-gba-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minrt-sys = { path = "./minrt-sys" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
opt-level = "s"
panic = "abort"

[profile.dev.package.compiler_builtins]
overflow-checks = false
