[package]
name = "rust-gba-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
minrt-sys = { path = "minrt-sys" }
libplayground = { path = "libplayground" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
opt-level = "s"
panic = "abort"

[profile.dev.package.compiler_builtins]
overflow-checks = false
